2021-03-25  Jacob Bachmeyer  <jcb@gnu.org>

	PR47382

	* dejagnu, runtest: Remove use of "$()" command substitution and
	"$(())" arithmetic substitution shell constructs.  The /bin/sh on
	Solaris 10 does not support them.  They were replaced with the
	traditional backticks for command substitution and backticks and
	the expr command for arithmetic substitution.

	Also add markers to explicitly disable shellcheck warnings that
	would lead to reintroducing these problems.

	Also avoid the non-portable "`..."..."...`" construct on a warning
	in the GNU Autoconf manual, section "Shell Substitutions",
	although this introduces additional variables.

2021-03-22  Jacob Bachmeyer  <jcb@gnu.org>

	* configure: Regenerate.

	* runtest.exp, configure.ac, doc/version.texi: Update version.

	* config.guess, config.sub: Import from upstream.

	* MAINTAINERS: Acknowledge that Ben Elliston has left the project.

2021-03-15  Jacob Bachmeyer  <jcb@gnu.org>

	* Makefile.am, Makefile.in: Update accordingly.

	* contrib/compare_tests: Remove.  This file lacked a GPL notice.
	This file was imported from GCC many years ago.  The GCC version
	has benefited from continued development, while ours has not.

	* testsuite/runtest.libs/load_lib.exp: Remove.  This file lacked a
	GPL notice and an attempt to contact the contributor produced no
	response.  The tests in this file will need to be rewritten in any
	case; there is a bug in load_lib that they should expose and there
	is now additional infrastructure for tests of this type that was
	not available when this file was written.

2020-12-27  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/runtest.libs/libs.exp (process_test): Report running
	test scripts as each test script is run.
	Also, at top-level, sort the list of tests to run.

	* doc/dejagnu.texi (testsuite procedure): Remove noise word "api"
	from new "testsuite can call api" feature test API entrypoint.
	* lib/framework.exp (testsuite_can): Likewise.